[tool.poetry]
name = "url_shortcutter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic-settings = "^2.7.1"
shortuuid = "^1.0.13"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
isort = "^6.0.0"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
alembic = "^1.14.1"
pre-commit = "^4.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120